om/ompy/parser/test/programs/illformed/stray_open.om
well { do { Hello { World} } whats this
====
1
1
19
